--- a/app/src/main/res/layout/activity_yell.xml
+++ b/app/src/main/res/layout/activity_yell.xml
@@ -2,15 +2,13 @@
 				xmlns:tools="http://schemas.android.com/tools"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
-				android:paddingLeft="@dimen/activity_horizontal_margin"
-				android:paddingRight="@dimen/activity_horizontal_margin"
-				android:paddingTop="@dimen/activity_vertical_margin"
-				android:paddingBottom="@dimen/activity_vertical_margin"
 				tools:context="jp.co.spajam.honsenapp.YellActivity">
 
-	<TextView
-		android:text="@string/hello_world"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"/>
+	<ImageView
+		android:layout_width="match_parent"
+		android:layout_height="200dp"
+		android:scaleType="fitXY"
+		android:layout_alignParentBottom="true"
+		android:src="@drawable/map"/>
 
 </RelativeLayout>
