--- a/app/src/main/res/layout/activity_yell.xml
+++ b/app/src/main/res/layout/activity_yell.xml
@@ -1,10 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 				xmlns:tools="http://schemas.android.com/tools"
+				android:id="@+id/root"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				tools:context="jp.co.spajam.honsenapp.YellActivity">
 
 	<ImageView
+		android:id="@+id/map"
 		android:layout_width="match_parent"
 		android:layout_height="200dp"
 		android:scaleType="fitXY"
