--- a/app/src/main/res/layout/activity_yell.xml
+++ b/app/src/main/res/layout/activity_yell.xml
@@ -5,6 +5,8 @@
 				android:layout_height="match_parent"
 				tools:context="jp.co.spajam.honsenapp.YellActivity">
 
+
+
 	<ImageView
 		android:id="@+id/map"
 		android:layout_width="match_parent"
@@ -12,5 +14,12 @@
 		android:scaleType="fitXY"
 		android:layout_alignParentBottom="true"
 		android:src="@drawable/map"/>
+
+	<ImageView
+		android:id="@+id/yell_sample"
+		android:layout_width="40dp"
+		android:layout_height="120dp"
+		android:layout_alignParentBottom="true"
+		android:src="@drawable/yell"/>
 
 </RelativeLayout>
