yell画像追加。yellが上まで飛んで行くサンプル実装。

--- a/app/src/main/res/layout/activity_yell.xml
+++ b/app/src/main/res/layout/activity_yell.xml
@@ -17,8 +17,9 @@
 
 	<ImageView
 		android:id="@+id/yell_sample"
-		android:layout_width="40dp"
-		android:layout_height="120dp"
+		android:layout_width="15dp"
+		android:layout_height="30dp"
+		android:layout_marginBottom="200dp"
 		android:layout_alignParentBottom="true"
 		android:src="@drawable/yell"/>
 
