--- a/app/src/main/res/layout/activity_yell.xml
+++ b/app/src/main/res/layout/activity_yell.xml
@@ -3,6 +3,7 @@
 				android:id="@+id/root"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
+				android:background="@color/black"
 				tools:context="jp.co.spajam.honsenapp.YellActivity">
 
 
@@ -12,6 +13,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="200dp"
 		android:scaleType="fitXY"
+		android:layout_margin="16dp"
 		android:layout_alignParentBottom="true"
 		android:src="@drawable/map"/>
 
