--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -2,4 +2,5 @@
 <resources>
 	<color name="main_color">#FF8A65</color>
 	<color name="white">#FFFFFF</color>
+	<color name="black">#000000</color>
 </resources>
