--- a/app/src/main/res/layout/activity_sasube.xml
+++ b/app/src/main/res/layout/activity_sasube.xml
@@ -14,4 +14,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <TextView
+        android:id="@+id/textView2"
+        android:text="@string/hello_world"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        />
+
+
+
 </RelativeLayout>
