--- a/app/src/main/res/layout/activity_yell.xml
+++ b/app/src/main/res/layout/activity_yell.xml
@@ -6,7 +6,14 @@
 				android:background="@color/black"
 				tools:context="jp.co.spajam.honsenapp.YellActivity">
 
-
+	<ImageView
+		android:id="@+id/tama"
+		android:layout_width="100dp"
+		android:layout_height="50dp"
+		android:layout_alignParentTop="true"
+		android:layout_centerHorizontal="true"
+		android:layout_marginTop="-25dp"
+		android:background="@drawable/circle"/>
 
 	<ImageView
 		android:id="@+id/map"
@@ -21,8 +28,8 @@
 		android:id="@+id/yell_sample"
 		android:layout_width="15dp"
 		android:layout_height="30dp"
-		android:layout_marginBottom="200dp"
-		android:layout_alignParentBottom="true"
+		android:layout_alignBottom="@+id/map"
+		android:layout_alignLeft="@+id/map"
 		android:src="@drawable/yell"/>
 
 </RelativeLayout>
