--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
         android:hint="ニックネームを入力"
         android:textSize="16sp"
         android:gravity="center"
+        android:inputType="text"
         android:layout_marginTop="40dp"
         android:layout_below="@+id/title_image"
         android:layout_centerHorizontal="true"/>
