たまの画像を変更

--- a/app/src/main/res/layout/activity_yell.xml
+++ b/app/src/main/res/layout/activity_yell.xml
@@ -13,7 +13,7 @@
 		android:layout_alignParentTop="true"
 		android:layout_centerHorizontal="true"
 		android:layout_marginTop="-25dp"
-		android:background="@drawable/circle"/>
+		android:background="@drawable/genki2"/>
 
 	<ImageView
 		android:id="@+id/map"
