--- a/app/src/main/res/layout/activity_yell.xml
+++ b/app/src/main/res/layout/activity_yell.xml
@@ -3,7 +3,7 @@
 				android:id="@+id/root"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
-				android:background="@color/black"
+				android:background="@drawable/background_gradation"
 				tools:context="jp.co.spajam.honsenapp.YellActivity">
 
 	<ImageView
