--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 	   android:shape="oval">
+	<!--
 	<solid android:color="@color/main_color"/>
+	-->
+	<gradient
+		android:startColor="#fff"
+		android:centerColor="#fff"
+		android:endColor="#94e2ff"
+		android:type="radial"
+		android:gradientRadius="100"
+		/>
 </shape>
