レイアウト修正

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,14 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#ff5151"
-                tools:context=".MainActivity">
-
-
-    <ScrollView
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <RelativeLayout
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+           >
+    <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="0dp"
+            android:background="#ff5151"
+            tools:context=".MainActivity">
             <ImageView
                 android:id="@+id/title_image"
                 android:layout_width="100dp"
@@ -38,7 +35,7 @@
                 android:hint="応援メッセージを入力"
                 android:textSize="16sp"
                 android:textColor="#fff"
-                android:textColorHint="#fff"
+                android:textColorHint="#55ffffff"
                 android:background="@drawable/apptheme_edit_text_holo_light"
                 android:gravity="center"
                 android:inputType="text"
@@ -47,19 +44,22 @@
                 android:layout_marginTop="40dp"
                 android:layout_below="@+id/title"
                 android:layout_centerHorizontal="true"/>
+        <Button
+            android:id="@+id/yell_button"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@+id/edit_nickname"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="64dp"
+            android:layout_marginRight="64dp"
+            android:background="@drawable/button_yell_start"
+            android:layout_centerHorizontal="true"
+            android:textColor="#fff"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:text="応援する!"/>
 
-            <Button
-                android:id="@+id/yell_button"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_below="@+id/edit_nickname"
-                android:layout_marginTop="40dp"
-                android:background="@drawable/button_yell_start"
-                android:layout_centerHorizontal="true"
-                android:textColor="#fff"
-                android:text="応援する"/>
 
-        </RelativeLayout>
-    </ScrollView>
 
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
