--- a/app/src/main/res/drawable/shape_button_yell_start.xml
+++ b/app/src/main/res/drawable/shape_button_yell_start.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:bottom="2dp" >
-    <shape android:shape="rectangle">
-        <solid android:color="#1D1A2B"/>
-        <corners android:radius="50dp" />
-    </shape>
-</item>
 <item>
     <shape android:shape="rectangle">
-        <solid android:color="#312C47"/>
+        <solid android:color="#FF8F00"/>
         <corners android:radius="50dp" />
     </shape>
 </item>
+<item android:bottom="4dp" >
+    <shape android:shape="rectangle">
+
+        <solid android:color="#FFC107"/>
+        <corners android:radius="50dp" />
+    </shape>
+</item>
+
 
 
 </layer-list>
