--- a/app/src/main/res/drawable/shape_button_yell_start_pressed.xml
+++ b/app/src/main/res/drawable/shape_button_yell_start_pressed.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:bottom="2dp" >
         <shape android:shape="rectangle">
-           <solid android:color="#1D1A2B"/>
+           <solid android:color="#FF8F00"/>
 
             <corners android:radius="50dp" />
 
@@ -10,7 +10,7 @@
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#1D1A2B"/>
+            <solid android:color="#FF8F00"/>
 
             <corners android:radius="50dp" />
         </shape>
